Clean-ups and package rename for plugins